--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack-dev-server --mode development",
     "build": "webpack",
     "build:dev": "webpack-dev-server --contentBase=build/",
-    "server": "webpack-dev-server --hot --mode development --open --watch"
+    "server": "webpack-dev-server --hot --mode development --open --watch",
+    "heroku-init": "http-server ./ -p ${PORT:=5000} -c-1"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
+    "http-server": "^0.11.1",
     "node-sass": "^4.9.2",
     "path": "^0.12.7",
     "react": "^16.4.1",
