--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack",
     "build:dev": "webpack-dev-server --contentBase=build/",
     "server": "webpack-dev-server --hot --mode development --open --watch",
-    "heroku-init": "http-server ./build/index.html -p ${PORT:=5000} -c-1"
+    "heroku-init": "http-server ./build -p ${PORT:=5000} -c-1 -e"
   },
   "repository": {
     "type": "git",
