--- a/app.json
+++ b/app.json
@@ -4,5 +4,10 @@
     "env": {
         "NPM_CONFIG_PRODUCTION": "false",
         "NODE_ENV": "development"
-      }
+      },
+      "buildpacks": [
+        {
+          "url": "heroku/nodejs"
+        }
+      ]
 }
