--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "webpack-dev-server --contentBase=build/",
     "server": "webpack-dev-server --hot --mode development --open --watch",
     "postinstall" : "gulp build",
-    "heroku-init": "http-server ./build -p ${PORT:=5000} -c-1 -e"
+    "heroku-init": "gulp build && http-server ./build -p ${PORT:=5000} -c-1 -e"
   },
   "repository": {
     "type": "git",
