--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-semantic-ui-range": "^0.6.1",
     "sass-loader": "^7.0.3",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0",
